2005-08-05  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h,
	src/appconfig.h,
	src/mainframe.cpp,
	src/appconfig.cpp:
	Add vertical align center.

2005-07-28  Chia I Wu  <b90201047@ntu.edu.tw>

	* src/core/font.h, src/core/font.cpp: Code cleanup.
	GetWidth() returns single width.
	Remember the width/height used to open a font so that we can avoid
	unnecessary CreateXftFont(). Also, this helps SetFontFamily() work
	right.
	(CFont::RecalculateMetrics): Calculate font metrics ourselves. This
	enables us to draw characters in a compact way.

	* src/core/termview.cpp: Reflect changes made to CFont.
	Make font selecting respect m_AutoFontSize.
	(CTermView::GetCellSize): New member function to calculate cell
	width/height in a uniform way.

	* src/mainframe.cpp: Use CTermView::SetFont instead of
	CFont::SetFont.

2005-07-28  Jim Huang  <jserv@kaffe.org>

	* configure.ac:
	Workaround to strange Gentoo Mozilla/Firefox package layout.

	* src/debug.h,
	src/core/debug.h:
	Move the former to the later.

	* src/core/Makefile.am: Likewise.

2005-07-28  Kanru Chen  <koster@debian.org.tw>

	* src/autologinpage.cpp,
	src/sitepage.cpp,
	src/emoticondlg.cpp,
	src/configfile.cpp,
	src/core/caret.cpp,
	src/core/termdata.cpp,
	src/core/termview.cpp,
	src/core/site.cpp,
	src/core/font.cpp,
	src/core/termview.h,
	src/core/view.cpp,
	src/core/widget.cpp,
	src/editfavdlg.cpp,
	src/prefdlg.cpp,
	src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp,
	src/debug.h,
	src/sitedlg.cpp,
	src/mainframe.cpp,
	src/dialog.cpp,
	src/appconfig.cpp,
	src/pcmanx_pure_gtk2.cpp,
	src/inputdialog.cpp,
	src/notebook.cpp,
	src/listbox.cpp,
	src/generalprefpage.cpp,
	src/sitelistdlg.cpp:
	Add debug routine. Use INFO(..) to info message,
	INFO_ON(..) really enable info, DEBUG(..) for debug message.

	* src/script/script.cpp,
	src/view/telnetcon.h,
	src/view/telnetcon.cpp,
	data/orz.py:
	New function SendUnEscapedString().
